<resources>
    <string name="app_name">LEADERBOARD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leader_name">Nyong Nsikak</string>
    <string name="leader_value">220 Learning hours, Nigeria</string>
    <string name="splash_screen_image">GAD2020</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_git">Project on GITHUB (link)</string>
    <string name="project_submission">Project Submission</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_not_successful">Submission not successful</string>
    <string name="confirmation_text">Are you sure?</string>
    <string name="confirm_button_text">yes</string>
    <string name="submit">Submit</string>
    <string name="leader_board">LEADERBOARD</string>
</resources>